tests/resource/valid/collection/dictionary_return_is_optional.mamba
def j := { 10 => 200, 30 => 5 }

def f(key: Int) -> Str? => j[key]
