tests/resource/invalid/type/collection/dictionary_key_error_not_caught.mamba
def a := { 20 => "asdf", 30 => "asdf" }

def f() -> Str => a[20]
